--- a/Project3_UserMicroservice/src/main/resources/application.properties
+++ b/Project3_UserMicroservice/src/main/resources/application.properties
@@ -2,6 +2,6 @@ server.port=8070
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql = true
-spring.datasource.url=jdbc:mysql://localhost:3306/test3
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://138.68.133.189:3306/progadv1_v2
+spring.datasource.username=digitalgarage
+spring.datasource.password=digipassword
