firts draft react project

--- a/Project3_FE/.gitignore
+++ b/Project3_FE/.gitignore
@@ -9,6 +9,12 @@ target/
 .settings
 .springBeans
 
+### WebStorm ###
+yarn-error.log
+node_modules
+.DS_Store
+
+
 ### IntelliJ IDEA ###
 .idea
 *.iws
