--- a/Project_ServiceProductMicroservice/pom.xml
+++ b/Project_ServiceProductMicroservice/pom.xml
@@ -71,7 +71,19 @@
             <artifactId>core</artifactId>
             <version>3.3.1</version>
         </dependency>
-    </dependencies>
+        <dependency>
+            <groupId>it.iseed.account</groupId>
+            <artifactId>UserMicroservice</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+		<dependency>
+			<groupId>it.iseed.account</groupId>
+			<artifactId>UserMicroservice</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
