--- a/Project3_BE/src/main/resources/application.properties
+++ b/Project3_BE/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.show-sql = true
 spring.datasource.url=jdbc:mysql://localhost:3306/test3
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=digitalgarage
+spring.datasource.password=digipassword
