--- a/Project3_FE/package.json
+++ b/Project3_FE/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "datepicker": "^0.0.0",
     "fetch": "^1.1.0",
+    "moment": "^2.22.1",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
+    "react-datepicker": "^1.4.1",
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
