--- a/Project3_FE/package.json
+++ b/Project3_FE/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "coinmarketcap": "^0.2.0",
     "datepicker": "^0.0.0",
     "fetch": "^1.1.0",
     "moment": "^2.22.1",
